updated items, improved print

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -12,7 +12,7 @@ title: My Rad Blog
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="assets/site.css">
+    <link rel="stylesheet" href="/assets/site.css">
   </head>
   <body>
     <div class="main">
