--- a/assets/site.css
+++ b/assets/site.css
@@ -246,3 +246,14 @@ body {
   line-height: 1.2em;
 }
 
+/* Short CV */
+
+.biography, 
+.job_description, 
+.projects-head,
+.achievement-list {
+  display: none;
+}
+
+.presentations li:nth-of-type(1n+7) {display: none;}
+
